--- a/frontend/src/pages/Three/Three.module.css
+++ b/frontend/src/pages/Three/Three.module.css
@@ -1,2 +1,31 @@
 .container {
+  padding: 20px 80px;
+}
+h1 {
+  text-align: center;
+}
+.container table {
+  display: flex;
+}
+
+.container table thead tr,
+.container table tbody tr {
+  display: flex;
+  flex-direction: column;
+}
+
+.table {
+  width: 100%;
+  text-align: center;
+}
+.table thead {
+  width: 100%;
+}
+.table tbody {
+  width: 100%;
+}
+
+.table th,
+.table td {
+  border: 1px solid black;
 }
