--- a/frontend/src/pages/Two/Two.module.css
+++ b/frontend/src/pages/Two/Two.module.css
@@ -1,2 +1,23 @@
 .container {
+  padding: 20px 80px;
+}
+h1 {
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.form input {
+  width: 350px;
+}
+
+.green {
+  border: 1px solid greenyellow;
+  outline: 1px solid green;
 }
