--- a/frontend/src/pages/Three/Three.module.css
+++ b/frontend/src/pages/Three/Three.module.css
@@ -17,6 +17,7 @@ h1 {
 .table {
   width: 100%;
   text-align: center;
+  margin-top: 20px;
 }
 .table thead {
   width: 100%;
@@ -28,4 +29,15 @@ h1 {
 .table th,
 .table td {
   border: 1px solid black;
+}
+
+@media (max-width: 350px) {
+  .container {
+    padding: 10px 5px;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    padding: 10px 10px;
+  }
 }
